@@ -1,4 +1,4 @@
 DIST ripwrap-0.20.tar.gz 59035 RMD160 f93a4928040c93439fbe9b957ac4e238b558fa9c SHA1 e0ed69b614c8f202a0d330c5422354693d398f58 SHA256 4e8c540088175b1d29ca431bc136062c4825c8da86b3911affef75c79abb7fc9
 EBUILD ripwrap-0.20.ebuild 1130 RMD160 dc147e4378029cb774242cea4e863ad6ecae172e SHA1 f4109475d7f33bb3b6890cbb120ba277e54ad276 SHA256 932eac935885ee2673467aedfc215be54a55f2504c8a5edd1348cb7eba9fc035
-MISC ChangeLog 531 RMD160 78f38e6702c8da113e38fcf3b9401d224e52accb SHA1 1c168ff520f8412c2391560fcfaf3a139fe801c5 SHA256 1babc913ae5cded4070fec0b70bcfe63dc23bd29b04c2b73c8c97705a407d363
-MISC metadata.xml 871 RMD160 b490fd0cc2cce10a03067c3272c9024582f1b7e5 SHA1 c20b45f0879cc9850200f8bbc5144eb27d63558e SHA256 b8823fe7786e9ba430aaf05f53d407c63f4f0fcb44a36d1334b7ab5efca0182d
+MISC ChangeLog 624 RMD160 9fad7e6b683a15150295070c3aada715c0cb3cbd SHA1 88efd978d315ca03a33ab5a224d0a2daf8f5a8a9 SHA256 a8b460f50c7d9d0e40e7d79c780c35cf78eb10d1fd5c025c47f300c36e8b4070
+MISC metadata.xml 775 RMD160 9490eb51b4234c1b84c65592a507988c21e691f0 SHA1 9be0537705146fd0195b333537450274ad4e5389 SHA256 fd16666b4369b52e3f80b691f2ef16cb07bdadddd0bde1f96a14a2add697ebde
