@@ -1,11 +1,7 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-	<herd>video</herd>
-	<maintainer>
-		<email>shamgar03@users.sourceforge.net</email>
-		<name>Micah Chambers</name>
-	</maintainer>
+	<herd>maintainer-wanted</herd>
 	<longdescription>
 		RipWrap is a Gtk2::Perl application for encoding from various video
 		formats (including DVD's) to various formats. It neatly wraps MPlayer
